force-app/main/default/objects/Account_Registration__x/Account_Registration__x.object-meta.xml
<CustomObject>
    <description>Represents Registration Numbers (CRNs and Plastic Cards) linked to a financial account</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>AccountRegistration</externalName>
    <label>Account Registration</label>
    <pluralLabel>Account Registrations</pluralLabel>
</CustomObject>