force-app/main/default/objects/Account_Registration__x/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Additional Information</description>
    <externalDeveloperName>AdditionalInformation</externalDeveloperName>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>