force-app/main/default/objects/Account_Registration__x/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CTM</complianceGroup>
    <description>16-digit plastic card number. First 12 digits will be masked</description>
    <externalDeveloperName>cardLast4digits</externalDeveloperName>
    <label>Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>