force-app/main/default/objects/Account_Registration__x/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>External Lookup to the parent account external record</description>
    <externalDeveloperName>creditCard</externalDeveloperName>
    <label>Credit Card</label>
    <length>18</length>
    <referenceTo>Credit_Card__x</referenceTo>
    <relationshipLabel>Account Registrations</relationshipLabel>
    <relationshipName>Account_Registrations</relationshipName>
    <type>ExternalLookup</type>
</CustomField>