force-app/main/default/objects/Account_Registration__x/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>The external identifier the Customer Registration Number record</description>
    <externalDeveloperName>externalId</externalDeveloperName>
    <label>ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>