force-app/main/default/objects/Account_Registration__x/fields/Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>Loan_Account__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>External Lookup to the parent account external record</description>
    <externalDeveloperName>loanAccount</externalDeveloperName>
    <label>Loan Account</label>
    <length>18</length>
    <referenceTo>Loan_Account__x</referenceTo>
    <relationshipLabel>Account Registrations</relationshipLabel>
    <relationshipName>Account_Registrations</relationshipName>
    <type>ExternalLookup</type>
</CustomField>