force-app/main/default/objects/Account_Registration__x/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CTM</complianceGroup>
    <description>Represents the name of the registration</description>
    <externalDeveloperName>customerPreferredName</externalDeveloperName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>