force-app/main/default/objects/Account_Registration__x/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>The Customer Registration Number to display</description>
    <externalDeveloperName>crnLast4Digits</externalDeveloperName>
    <label>Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>