force-app/main/default/objects/Account_Registration__x/fields/Number_Tokenised__c.field-meta.xml
<CustomField>
    <fullName>Number_Tokenised__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>The tokenised representation of the registration number</description>
    <externalDeveloperName>tokenizedRegistrationNo</externalDeveloperName>
    <label>Number Tokenised</label>
    <length>255</length>
    <type>Text</type>
</CustomField>