force-app/main/default/objects/Account_Registration__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CTM</complianceGroup>
    <description>The status of the registration</description>
    <externalDeveloperName>registrationStatus</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>