force-app/main/default/objects/Account_Registration__x/fields/Term_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Term_Deposit__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - OCV</complianceGroup>
    <description>External Lookup to the parent account external record</description>
    <externalDeveloperName>termDeposit</externalDeveloperName>
    <label>Term Deposit</label>
    <length>18</length>
    <referenceTo>Term_Deposit__x</referenceTo>
    <relationshipLabel>Account Registrations</relationshipLabel>
    <relationshipName>Account_Registrations</relationshipName>
    <type>ExternalLookup</type>
</CustomField>