force-app/main/default/objects/Account_Registration__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Personal Information;Source - CTM</complianceGroup>
    <description>Type of the CRN</description>
    <externalDeveloperName>registrationType</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>